# datafusion-bio-functions

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .tmp_chr4_nm002111_translation_seq_canonical.txt  CLAUDE.md  Cargo.toml  README.md
.github/: RELEASE.md  dependabot.yml
.github/workflows/: ci.yml  release.yml
.planning/: vep-multithreaded-parquet-plan.md
.tmp/: parquet-annotation-perf-issue.md
benchmark-infra/: .gitignore  README.md
benchmark-infra/ansible/: playbook.yml  requirements.yml
benchmark-infra/scripts/: run_benchmark.sh  setup.sh
benchmark-infra/terraform/: .terraform.tfstate.lock.info  main.tf  terraform.tfstate.1773909414.backup  terraform.tfvars.example  variables.tf
datafusion/bio-function/: Cargo.toml
datafusion/bio-function-pileup/: Cargo.toml
datafusion/bio-function-pileup/examples/: bench_cigar_format.rs  bench_cigar_parse.rs  bench_coverage.rs  dump_coverage.rs
datafusion/bio-function-pileup/scripts/: compare_samtools.py
datafusion/bio-function-pileup/src/: cigar.rs  coverage.rs  events.rs  filter.rs  lib.rs  physical_exec.rs  schema.rs  table_function.rs
datafusion/bio-function-pileup/tests/: mosdepth_compat.rs
datafusion/bio-function-ranges/: Cargo.toml  README.md
datafusion/bio-function-ranges/examples/: bench_overlap_count.rs  count_overlaps_bench.rs  interval_join_bench.rs
datafusion/bio-function-ranges/src/: algorithms.rs  array_utils.rs  cluster.rs  complement.rs  config.rs  count_overlaps.rs  count_overlaps_apple_gpu.rs  count_overlaps_rank.rs  filter_op.rs  grouped_stream.rs  interval_tree.rs  lib.rs  merge.rs  nearest.rs  nearest_index.rs  overlap.rs  session_builder.rs  session_context.rs  subtract.rs  table_function.rs
datafusion/bio-function-ranges/src/physical_planner/: bio_physical_planner.rs  bio_query_planner.rs  intervals.rs  mod.rs
datafusion/bio-function-ranges/src/physical_planner/joins/: interval_join.rs  utils.rs
datafusion/bio-function-ranges/superintervals/: Cargo.toml
datafusion/bio-function-ranges/superintervals/src/: superintervals.rs
datafusion/bio-function-ranges/tests/: integration_test.rs
datafusion/bio-function-vcftools/: Cargo.toml  README.md
datafusion/bio-function-vcftools/src/: common.rs  lib.rs
datafusion/bio-function-vcftools/src/logical/: fused_array_transform.rs  mod.rs  optimizer_rule.rs
datafusion/bio-function-vcftools/src/physical/: extension_planner.rs  fused_array_transform_exec.rs  mod.rs  query_planner.rs
datafusion/bio-function-vcftools/src/sample_qc/: mod.rs  processing.rs  table_function.rs  writer.rs
datafusion/bio-function-vcftools/src/udfs/: array_ops.rs  compare.rs  conditional.rs  mod.rs  numeric.rs  vcf_genotype_qc.rs
datafusion/bio-function-vcftools/tests/: integration_test.rs  sample_qc_test.rs
datafusion/bio-function-vep/: CSQ_FIELDS_PLAN.md  Cargo.toml  PORTING_PLAN.md  README.md  STRICT_VEP_PARITY_PLAN.md  benchmark.md
datafusion/bio-function-vep-cache/: Cargo.toml
datafusion/bio-function-vep-cache/docs/: mmap_arrow_v2_spec.md
datafusion/bio-function-vep-cache/examples/: bench_annotate.rs  bench_annotate_v5.rs  bench_fjall_gets.rs  bench_utilization.rs  bench_window_read.rs  load_cache.rs  load_cache_by_contig_serial.rs  load_cache_full.rs
datafusion/bio-function-vep-cache/src/: allele_index.rs  cache_exec.rs  cache_provider.rs  key_encoding.rs  kv_store.rs  lib.rs  loader.rs  mmap_block_store.rs  position_entry.rs  position_index.rs  window.rs
datafusion/bio-function-vep/examples/: annotate_vep_golden_bench.rs  bench_annotate.rs  bench_annotate_debug.rs  bench_annotate_vcf.rs  bench_fjall_gets.rs  bench_sift_queries.rs  compact_fjall.rs  compare_backends.rs  diff_materialized.rs  load_cache.rs  load_cache_full.rs  load_context_kv.rs  load_sift_cache.rs  lookup_kv_bench.rs  lookup_parquet_bench.rs  profile_annotation.rs  rewrite_parquet_by_chrom.rs  strip_fjall.rs  test_cache_cols_check.rs  tmp_export_parquet_to_vortex.rs  tmp_verify_vortex.rs  vcf_batch_stats.rs
datafusion/bio-function-vep/src/: allele.rs  annotate_provider.rs  annotate_table_function.rs  annotation_store.rs  cache_builder.rs  config.rs  coordinate.rs  golden_benchmark.rs  hgvs.rs  lib.rs  lookup_provider.rs  miss_worklist.rs  partitioned_cache.rs  plugin.rs  plugin_cache_builder.rs  plugin_lookup.rs  schema_contract.rs  so_terms.rs  table_function.rs  transcript_consequence.rs  variant_lookup_exec.rs  vcf_sink.rs  vortex_cache.rs
datafusion/bio-function-vep/src/kv_cache/: allele_index.rs  cache_exec.rs  cache_provider.rs  context_store.rs  key_encoding.rs  kv_store.rs  loader.rs  mod.rs  position_entry.rs  sift_store.rs
datafusion/bio-function-vep/tests/: arrow_roundtrip_golden.rs  vcf_output_roundtrip.rs  vcf_passthrough.rs  vcf_roundtrip_golden.rs  vcf_roundtrip_golden_fjall.rs
datafusion/bio-function/src/: lib.rs  query_planner.rs
datafusion/bio-query-planner/: Cargo.toml
datafusion/bio-query-planner/src/: lib.rs
docs/: vep-parquet-optimization.md
openspec/changes/add-fjall-variation-lookup/: design.md  fjall_improvement.md  optimizations.md  proposal.md  tasks.md
openspec/changes/add-fjall-variation-lookup/specs/fjall-variation-lookup/: spec.md
openspec/changes/add-vep-pick-modes/: README.md  design.md  proposal.md  tasks.md
openspec/changes/add-vep-pick-modes/specs/vep-pick-modes/: spec.md
openspec/changes/gpu-count-overlaps-apple-metal/: design.md  proposal.md  tasks.md
openspec/changes/gpu-count-overlaps-apple-metal/specs/gpu-count-overlaps/: spec.md
openspec/changes/optimize-annotation-context-loading/: design.md  proposal.md  tasks.md
testing/data/ranges/: expected_coverage.parquet
vep-benchmark/cache/fjall_115_GRCh38_p6/journals/: 0
vep-benchmark/data/: HG002_chr1.vcf.gz.tbi  HG002_chr22.vcf.gz.tbi
vep-benchmark/data/golden/: .gitignore  golden_1000_vep115.vcf  input_1000.vcf  reference_chr1.fa  reference_chr1.fa.fai
vep-benchmark/data/golden/cache/exon/: chr1.parquet
vep-benchmark/data/golden/fjall_cache/: exon  motif  regulatory  transcript  translation_core  translation_sift  variation
(+16 files in other folders)
