[workspace]
resolver = "2"
members = ["datafusion/bio-function-pileup", "datafusion/bio-function-ranges", "datafusion/bio-function-vep"]
exclude = ["datafusion/bio-function-ranges/superintervals"]

[workspace.package]
license = "Apache-2.0"
authors = ["BiodataGeeks Team"]
repository = "https://github.com/biodatageeks/datafusion-bio-functions"
homepage = "https://github.com/biodatageeks/datafusion-bio-functions"
edition = "2024"

[workspace.dependencies]
datafusion = { version = "52.1.0", default-features = false, features = [
    "nested_expressions",
    "crypto_expressions",
    "datetime_expressions",
    "encoding_expressions",
    "regex_expressions",
    "string_expressions",
    "unicode_expressions",
    "parquet",
    "recursive_protection",
    "sql",
] }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "rt", "macros"] }
futures = "0.3.31"
log = "0.4.27"
