[workspace]
resolver = "2"
members = ["datafusion/bio-function-pileup", "datafusion/bio-function-ranges", "datafusion/bio-function-vep", "datafusion/bio-function-vcftools", "datafusion/bio-query-planner"]
exclude = ["datafusion/bio-function-ranges/superintervals"]

[workspace.package]
license = "Apache-2.0"
authors = ["BiodataGeeks Team"]
repository = "https://github.com/biodatageeks/datafusion-bio-functions"
homepage = "https://github.com/biodatageeks/datafusion-bio-functions"
edition = "2024"

[workspace.dependencies]
datafusion = { version = "50.3.0" }
tokio = { version = "1.43.0", features = ["rt-multi-thread", "rt", "macros"] }
futures = "0.3.31"
log = "0.4.27"
serial_test = "3.1"
tempfile = "3.15"
parquet = "56.1"
async-trait = "0.1.88"
