[package]
name = "datafusion-bio-function-pileup"
version = "0.1.0"
description = "Depth-of-coverage (pileup) function for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[features]
default = ["bam"]
bam = ["dep:datafusion-bio-format-bam"]

[dependencies]
datafusion.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
datafusion-bio-format-bam = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "d7614388ad6435e10d7c7b82541f58f33562159f", optional = true }
async-trait = "0.1.88"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
datafusion-bio-format-bam = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "d7614388ad6435e10d7c7b82541f58f33562159f" }
