[package]
name = "datafusion-bio-function-ranges"
version = "0.3.1"
description = "Interval join, coverage, and count-overlaps for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
async-trait = "0.1.88"
ahash = "0.8.6"
coitrees = "0.4.0"
bio = "3.0.0"
rust-lapper = "1.1.0"
superintervals = { path = "superintervals" }
parking_lot = "0.12.3"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rstest = "0.26.1"
