[package]
name = "datafusion-bio-function-vep-cache"
version = "0.1.0"
description = "fjall KV cache backend for VEP variant lookup in Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
fjall = "2"
arrow-ipc = { version = "56", features = ["lz4"] }
async-trait = "0.1.88"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
