[package]
name = "datafusion-bio-function-vep-cache"
version = "0.1.0"
description = "fjall KV cache backend for VEP variant lookup in Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
fjall = "2"
arrow-ipc = { version = "56", features = ["lz4"] }
async-trait = "0.1.88"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3"
env_logger = "0.11"
datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "45562f3beb230c23008b19bfe6c172bd1c5923fa" }

[[example]]
name = "load_cache"
required-features = []

[[example]]
name = "bench_annotate"
required-features = []

[[example]]
name = "bench_window_read"
required-features = []
