[package]
name = "datafusion-bio-function-vep"
version = "0.1.0"
description = "VEP (Variant Effect Predictor) annotation functions for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
datafusion-bio-function-ranges = { path = "../bio-function-ranges" }
datafusion-bio-function-vep-cache = { path = "../bio-function-vep-cache", optional = true }
tokio.workspace = true
futures.workspace = true
log.workspace = true
async-trait = "0.1.88"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "45562f3beb230c23008b19bfe6c172bd1c5923fa" }

[[example]]
name = "vcf_batch_stats"
required-features = []

[features]
kv-cache = ["dep:datafusion-bio-function-vep-cache"]
