[package]
name = "datafusion-bio-function-vep"
version = "0.3.0"
description = "VEP (Variant Effect Predictor) annotation functions for Apache DataFusion"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion.workspace = true
tokio.workspace = true
futures.workspace = true
log.workspace = true
async-trait = "0.1.88"
fjall = { version = "3.1.1", optional = true }
arrow-ipc = { version = "56", features = ["lz4", "zstd"], optional = true }
lz4_flex = { version = "0.12.0", optional = true }
zstd = { version = "0.13.3", optional = true }
ahash = { version = "0.8.6", optional = true }
flate2 = "1.1.0"
coitrees = "0.4.0"
serde_json = "1"
noodles-core = "0.16"
noodles-fasta = "0.49"
parquet = { version = "56", features = ["arrow"] }
datafusion-bio-format-vcf = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "7ccaa58" }
datafusion-bio-format-ensembl-cache = { git = "https://github.com/biodatageeks/datafusion-bio-formats.git", rev = "9e9d873", optional = true }
indicatif = "0.18.4"

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
datafusion-bio-function-ranges = { path = "../bio-function-ranges" }
noodles-vcf = { git = "https://github.com/biodatageeks/noodles.git", rev = "9b7b2c5b6531373918302d4c07410e583f1b5b5c" }
env_logger = "0.11"
tempfile = "3"

[[example]]
name = "vcf_batch_stats"
required-features = []

[[example]]
name = "lookup_parquet_bench"
required-features = []

[[example]]
name = "lookup_kv_bench"
required-features = ["kv-cache"]

[[example]]
name = "load_cache"
required-features = ["kv-cache"]

[[example]]
name = "load_cache_full"
required-features = ["kv-cache"]

[[example]]
name = "load_sift_cache"
required-features = ["kv-cache"]

[[example]]
name = "bench_annotate"
required-features = ["kv-cache"]

[[example]]
name = "bench_fjall_gets"
required-features = ["kv-cache"]

[[example]]
name = "annotate_vep_golden_bench"
required-features = []

[[example]]
name = "profile_annotation"
required-features = []

[[example]]
name = "bench_annotate_vcf"
required-features = []

[features]
default = ["kv-cache"]
kv-cache = ["dep:fjall", "dep:arrow-ipc", "dep:lz4_flex", "dep:zstd", "dep:ahash"]
cache-builder = ["kv-cache", "dep:datafusion-bio-format-ensembl-cache"]
