[package]
name = "datafusion-bio-query-planner"
version = "0.1.0"
description = "Composable QueryPlanner for DataFusion bio extensions"
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
edition.workspace = true

[dependencies]
datafusion = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }
